--- a/lib/Catalyst/Manual/Monthly/2012/March/NotACatalystApp.pod
+++ b/lib/Catalyst/Manual/Monthly/2012/March/NotACatalystApp.pod
@@ -7,7 +7,7 @@ Catalyst::Manual::Monthly::2012::March::NotACatalystApp
 Back in the old days when web frameworks were new and shiny it made sense
 for developers to show off how the framework makes development quick easy
 and fun with little demonstration applications.  Create a blog in 5 minutes
-is the classic example.  the L<http://dev.catalyst.perl.org/repos/Catalyst/trunk/examples/CatalystAdvent|Catalyst Advent Calendar> code was
+is the classic example.  the L<Catalyst Advent Calendar|http://dev.catalyst.perl.org/repos/Catalyst/trunk/examples/CatalystAdvent> code was
 another. And it served well for quite some time.
 
 So when the time came to retire the calendar and replace it with this
@@ -22,12 +22,12 @@ useful too.
 
 While we could use Catalyst to do this, why should we?  Given we've got a
 good packaging and distribution mechanism (the CPAN), and given we've got a
-CPAN browser with a nice API (L<http://metacpan.org|MetaCPAN>), and given
+CPAN browser with a nice API (L<MetaCPAN|http://metacpan.org>), and given
 we've got a nice documentation formatting mechanism (pod), that's already
 all we need.  We don't need Catalyst for this, because it's not especially
 big or complicated.  For big and complicated things like CPAN, a Catalyst
 application is a useful thing, which is why we've got
-L<http://metacpan.org|MetaCPAN>. To use an analogy, just because we've got
+L<MetaCPAN|http://metacpan.org>. To use an analogy, just because we've got
 a hydraulic nail gun (Catalyst) doesn't mean we should go about shooting
 everything we own with nails.
 
@@ -56,7 +56,7 @@ repository>.
 =item *
 
 Readers.  Commenters might be nice too.  But we can get them after we get
-the infrastructure up, maybe by exploiting the L<http://disqus.com/|Disqus>
+the infrastructure up, maybe by exploiting the L<Disqus|http://disqus.com/>
 service.  We get more readers from having better infrastructure.
 
 =back
